log
ju., 17 de abr. de 2025 19:17:39: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:55:38: error: expected expression before 'size_t'
     HashMap* mapa = (HashMap*)malloc(size_t(HashMap));
                                      ^~~~~~
hashmap.c:57:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
eeef3b7
